# orca

./: .gitignore  Cargo.toml  README.md  add_test_test.wat  big_test.dump  big_test.wasm
.github/workflows/: deploy.yml  doc.yml  publish.yml  release.yml  release_major.yml  release_minor.yml  release_patch.yml  rust.yml
fac_orca/: Cargo.toml  fact.wasm
fac_orca/src/: main.rs
fac_wirm/: Cargo.toml  fact.js  package-lock.json
fac_wirm/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: component.rs  module.rs
src/: convert.rs  error.rs  ir.rs  lib.rs  module_builder.rs  opcode.rs  wrappers.rs
src/ir/: component.rs  convert.rs  dwarf.rs  function.rs  helpers.rs  id.rs  injector.rs  instr_tests.rs  iterator.rs  mod.rs  module.rs  section.rs  subiterator.rs  types.rs  wrappers.rs
src/ir/injector/: component_injector.rs  injector_trait.rs  module_injector.rs
src/ir/iterator/: component_iterator.rs  function_iterator.rs  iterator_trait.rs  mod.rs  module_iterator.rs
src/ir/module/: mod.rs  module_exports.rs  module_functions.rs  module_globals.rs  module_imports.rs  module_memories.rs  module_tables.rs  module_types.rs  side_effects.rs  test.rs
src/ir/subiterator/: component_subiterator.rs  function_subiterator.rs  mod.rs  module_subiterator.rs
src/iterator/: component_iterator.rs  iterator_trait.rs  mod.rs  module_iterator.rs
src/subiterator/: component_subiterator.rs  function_subiterator.rs  module_subiterator.rs
test/: hello_world.wat  test_c.wasm
tests/: convert_to_component.sh  func_builder.rs  instrumentation_test.rs  iterator_test.rs  round_trip_component.rs  round_trip_module.rs  round_trip_wast.rs  test_module.rs  wasi_snapshot_preview1.proxy.wasm
tests/common/: mod.rs
tests/dfinity/components/: func.wat  func_locals.wat  start.wat
tests/dfinity/modules/: const_expr.wasm  data_section.wasm  (+7 more)
tests/handwritten/: add.wat  add_c.wat
tests/spin/: hello_world.wasm  hello_world_module.wat
tests/wasm-tools/: README.md  component-model
(+216 files in other folders)
