[package]
name = "orca-wasm"
version = "0.6.0"
edition = "2021"
authors = ["Suhas Thalanki", "Alex Bai", "Elizabeth Gilbert"]
description = "A lightweight WebAssembly Transformation Library for the Component Model"
readme = "README.md"
homepage = "https://github.com/thesuhas/orca"
repository = "https://github.com/thesuhas/orca"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "instrumentation"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
wasm-encoder = { version = "0.219.1", features = ["wasmparser"]}
wasmparser = "0.219.1"
tempfile = "3.10.1"
serde_json = "1.0.121"
log = "0.4.22"
gimli = "0.31.0"

[dev-dependencies]
wasmprinter = "0.219.1"
wat = "1.219.1"
