[package]
name = "wirm"
version = "1.0.1"
edition = "2021"
authors = ["Suhas Thalanki", "Alex Bai", "Elizabeth Gilbert"]
description = "A lightweight WebAssembly Transformation Library for the Component Model"
readme = "README.md"
homepage = "https://github.com/thesuhas/wirm"
repository = "https://github.com/thesuhas/wirm"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "instrumentation"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
gimli = "0.32.0"
log = "0.4.22"
serde_json = "1.0.121"
tempfile = "3.10.1"
wasm-encoder = { version = "0.235.0", features = ["wasmparser"]}
wasmparser = "0.235.0"

[dev-dependencies]
wasmprinter = "0.235.0"
wat = "1.227.1"
