[package]
name = "orca-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wasm-smith = "0.215.0"
wasmprinter = "0.215.0"


[dependencies.orca]
path = ".."

[[bin]]
name = "component"
path = "fuzz_targets/component.rs"
test = false
doc = false
bench = false

[[bin]]
name = "module"
path = "fuzz_targets/module.rs"
test = false
doc = false
bench = false
